# Brainiac-1

./: Cargo.toml  README.md
brainiac/: Cargo.toml
brainiac/src/: error.rs  lib.rs  model.rs  ollama.rs
brainiac/src/factory/: constants.rs  mod.rs  prompt.rs  response.rs  templates.rs
brainiac/src/ollama/: formatter.rs  generator.rs  mod.rs  response.rs
brainiac_cli/: Cargo.toml
brainiac_cli/src/: cli.rs  main.rs
