[package]
name = "brainiac"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
estimated_read_time = "1.0.0"
gray_matter = "0.2.8"
log = "0.4.25"
ollama-rs = "0.2.3"
serde = "1.0.217"
serde_json = "1.0.136"
slugify-rs = "0.0.3"
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.8.19"
